 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.9rc1

 - [ZBX-4198] fixed items filter when filter by host name with multiple spaces (Vedmak)
 - [ZBX-4145] fixed images import script for PostgreSQL 9.1 and above (dimir)
 - [ZBX-4045] removed the check for duplicate hosts, made the server survive the situation instead (asaveljevs,Sasha)
 - [ZBX-4159] fixed frontend incorrectly handle new ids for history tables in distributed setup (Vedmak)
 - [ZBX-4216] fixed weekdays in Brazilian Portuguese translation; thanks to Ricardo Santos (Richlv)
 - [ZBX-4205] fixed trigger status change not logged in audit for inherited triggers (Vedmak)
 - [ZBX-4194] fixed SQL query errors in distributed environment with three digit node numbers (asaveljevs)
 - [ZBX-3257] fixed item type auto selection in item key popup (Eduard)
 - [ZBX-4026] fixed disabling SNMP host when unreachable (dimir)
 - [ZBX-3942] fixed agent's collector to not gather perfstat data on AIX unless it is requested (dimir)
 - [ZBX-4087] fixed error message when processing configuration file (dimir)
 - [ZBX-4158] fixed DB transaction processing, stop and abort on error (dimir)
 - [ZBX-4146] fixed page refreshing after adding new IT service (Eduard)
 - [ZBX-4176] fixed API action.update required parameters (Vedmak)
 - [ZBX-2882] fixed wrong item vfs.file.cksum[/vmlinuz] for some templates (Sasha)
 - [ZBX-4072] improved performance of event acknowledging (Sasha)
 - [ZBX-3829] fixed trigger dependency removed after template linked to host (Vedmak)
 - [ZBX-4131] fixed incorrect page shown after login (Vedmak)