@@ -160,7 +160,12 @@ function make_small_eventlist($startEvent){
 		'limit' => 20
 	);
 	$events = API::Event()->get($options);
-	order_result($events, array('clock', 'eventid'), ZBX_SORT_DOWN);
+	$sortFields = array(
+		array('field' => 'clock', 'order' => ZBX_SORT_DOWN),
+		array('field' => 'eventid', 'order' => ZBX_SORT_DOWN)
+	);
+	ArraySorter::sort($events, $sortFields);
+
 	foreach($events as $enum => $event){
 		$lclock = $clock;
 		$duration = zbx_date2age($lclock, $event['clock']);
