@@ -224,7 +224,7 @@ include_once('include/page_header.php');
 		}
 
 		$triggers = API::Trigger()->get($options);
-		morder_result($triggers, array('host', 'description'));
+		ArraySorter::sort($triggers, array('host', 'description'));
 
 		$table = new CTableInfo();
 		$table->setHeader(array(
